[gd_scene load_steps=5 format=3 uid="uid://81fgd2m6s10f"]

[ext_resource type="Script" path="res://scripts/MultiplayerTest.gd" id="1_vyuvl"]
[ext_resource type="PackedScene" uid="uid://dru1jfx5amx4j" path="res://objects/character.tscn" id="2_0muou"]
[ext_resource type="Script" path="res://scripts/multiplayer/Client.gd" id="3_tisnb"]
[ext_resource type="Script" path="res://scripts/multiplayer/Server.gd" id="4_7dlwi"]

[node name="MultiplayerTestUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1151.0
offset_bottom = 647.0
script = ExtResource("1_vyuvl")
playerObject = ExtResource("2_0muou")

[node name="StartServer" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 588.0
offset_right = 171.0
offset_bottom = 644.0
text = "Start Server"

[node name="StartClient" type="Button" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 588.0
offset_right = 341.0
offset_bottom = 644.0
text = "Start Client"

[node name="JoinLobby" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 63.0
offset_right = 171.0
offset_bottom = 119.0
text = "Join Lobby
"

[node name="Client" type="Node" parent="."]
script = ExtResource("3_tisnb")

[node name="lobbyName" type="LineEdit" parent="Client"]
offset_left = 4.0
offset_top = 6.0
offset_right = 337.0
offset_bottom = 60.0
placeholder_text = "enter lobby name"
alignment = 1

[node name="Server" type="Node" parent="."]
script = ExtResource("4_7dlwi")

[connection signal="pressed" from="StartServer" to="Server" method="_on_start_server_pressed"]
[connection signal="pressed" from="StartClient" to="Client" method="_on_start_client_pressed"]
[connection signal="pressed" from="JoinLobby" to="Client" method="_on_join_lobby_pressed"]
